--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "news_app",
-    "short_name": "news_app",
+    "name": "dev_portfolio",
+    "short_name": "dev_portfolio",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
